# veronica-core

./: .expected-repo  .gitignore  .zenodo.json  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  METRICS_QUICKSTART.md  MIGRATION.md  README.md  RUNTIME_POLICY_CONTROL_STRATEGY.md  SECURITY.md  execution-os.md  manifesto.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codespell.yml  pr-guard.yml  publish.yml  release.yml  sbom.yml  security_lint.yml  x-daily-post.yml
apps/audit/: README.md  app.js  scoring.js  styles.css
articles/: devto-retry-amplification-notes.md  devto-retry-amplification.md
benchmarks/: ablation_study.py  baseline_comparison.py  bench_ablation_study.py  bench_baseline_comparison.py  bench_multi_agent_loop.py  bench_recursive_tools.py  bench_retry_amplification.py  bench_websocket_runaway.py  scale_simulation.py
benchmarks/real_incidents/: __init__.py  incident_01_openai_loop.py  incident_02_cost_spike.py  incident_03_websocket_ddos.py  incident_04_semantic_echo.py  incident_05_multi_tool.py  incident_multi_agent_loop.py  incident_retry_storm.py  incident_tool_recursion.py  incident_websocket_runaway.py  run_all.py
data/state/: veronica_state.json
docs/: API.md  ARTICLE_LONG_FORM.md  CNAME  COMMUNITY_HN.md  COMMUNITY_REDDIT.md  DISTRIBUTED_CONSISTENCY.md  EVALUATION.md  EVOLUTION_ROADMAP.md  EXECUTION_PLAN.md  FEATURES.md  GOVERNED_MEMORY_MEDIATION.md  KEY_ROTATION.md  LAUNCH_POSTS.md  METRICS.md  ONE_MINUTE.md  OPENCLAW_OUTREACH.md  OPENCLAW_PR_TEMPLATE.md  PROOF.md  RELEASE_v0_1_0.md  RELEASING.md  ROADMAP.md  ROADMAP_OS.md  SECURITY_CLAIMS.md  SECURITY_CONTAINMENT_PLAN.md  SIGNING_GUIDE.md  THREAT_MODEL.md  V2_DEFERRED.md  XFAILED_REGISTRY.md  adaptive-control.md  amplification-factor.md  architecture.md  authority-aware-policy.md  bug-analysis-v3.7.1.md  context-linking.md  cookbook.md  degradation-ladder.md  devto_article.md  devto_article_ja.md  distributed-budget.md  distributed-deployment.md  (+14 more)
docs/design/: ag2_1_middleware_adapter.md
docs/failure-scenarios/: runaway-cost.md
docs/internal/: ag2_1_middleware_design.md
docs/issues/: authority-aware-policy.md  builtin-policy-packs.md  openai-agents-sdk-adapter.md  readme-positioning-refresh.md  runtime-side-effect-classification.md  tool-description-pinning.md
docs/paper/: veronica_runtime_containment.html  veronica_runtime_containment.md  veronica_runtime_containment_arxiv.md  veronica_runtime_containment_draft.md
docs/rfcs/: 2026-03-20-budget-tracker-enhancements-design.md  ag2-runtime-containment-hooks.md
docs/security/: safety_guarantees.md
docs/theory/: amplification_model.md
examples/: adaptive_demo.py  advanced_usage.py  ag2_circuit_breaker.py  ag2_minimal.py  basic_usage.py  budget_degrade_demo.py  client_dummy.py  client_ollama_stub.py  compliance_export_demo.py  destruction_test.py  distributed_circuit_breaker_demo.py  execution_context_demo.py  input_compression_skeleton_demo.py  langchain_minimal.py  langgraph_minimal.py  openclaw_integration_demo.py  quickstart_demo.py  runaway_loop_demo.py  token_budget_minimal_demo.py  twitter_demo.py
examples/integrations/: README.md
examples/ros2/: README.md  turtlebot_safety_demo.py
integrations/openclaw/: PATCH.md  README.md  __init__.py  adapter.py  demo.py
policies/: default.yaml  default.yaml.sig  default.yaml.sig.v2  key_pin.txt  public_key.pem
scripts/: bump-version.sh  gen_diagrams.py  metrics_aggregate.py  post_day4.bat  post_scheduled.py  proof_runner.py  schedule.json  x_poster.py
src/veronica/: __init__.py
src/veronica_core/: __init__.py  _utils.py  adapter_capabilities.py  agent_guard.py  backends.py  budget.py  circuit_breaker.py  (+19 more)
tests/: __init__.py  _nogil_compat.py  bench_distributed_circuit_breaker.py  conftest.py  test_a2a.py  test_a2a_adversarial.py  test_a2a_base_types.py  test_a2a_budget_isolation.py  test_a2a_card_verification.py  test_a2a_client_adapter.py  test_a2a_provenance.py  test_a2a_server_middleware.py  test_adapter_ag2.py  test_adapter_capabilities.py  test_adapter_crewai.py  test_adapter_exec.py  test_adapter_execution_context.py  test_adapter_harness.py  test_adapter_langchain.py  test_adapter_langgraph.py  test_adapter_metrics.py  test_adapter_ros2.py  test_adapter_ros2_adversarial.py  test_adapter_scaffold.py  test_adaptive_adversarial.py  test_adaptive_budget.py  test_adaptive_threshold.py  test_adversarial_compactness.py  test_adversarial_kernel_audit_bridge.py  test_adversarial_kernel_ha.py  test_adversarial_kernel_startup.py  test_adversarial_memory_gov.py  test_adversarial_message_governor.py  test_adversarial_policy.py  test_adversarial_trackers.py  test_adversarial_v33_integration.py  test_adversarial_view_policy.py  test_ag2_capability.py  test_agent_guard.py  test_aicontainer.py  (+161 more)
tools/: generate_sbom.py  lint_no_raw_exec.py  release_check.py  release_sign_policy.py  sbom_diff.py  verify_release.py
(+215 files in other folders)
