[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veronica-core"
version = "0.9.7"
description = "Runtime Containment Layer for LLM Systems. Enforces bounded cost, retries, recursion, wait states, and failure domains."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "amabito" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["llm", "agent", "runtime", "budget", "enforcement", "guardrails"]

[project.urls]
Repository = "https://github.com/amabito/veronica-core"
Issues = "https://github.com/amabito/veronica-core/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "cryptography>=42",
]

[tool.hatch.build.targets.sdist]
include = ["src/veronica", "src/veronica_core"]

[tool.hatch.build.targets.wheel]
packages = ["src/veronica", "src/veronica_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["veronica_core"]

[tool.coverage.report]
fail_under = 90
show_missing = true
