[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veronica-core"
version = "1.2.0"
description = "Runtime Containment Layer for LLM Systems. Enforces bounded cost, retries, recursion, wait states, and failure domains."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "amabito" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "llm", "agent", "runtime", "budget", "enforcement", "guardrails",
    "safety", "circuit-breaker", "token-budget", "ai-safety",
    "multi-agent", "containment", "rate-limit",
]

[project.urls]
Homepage = "https://veronica-core.dev"
Repository = "https://github.com/amabito/veronica-core"
Issues = "https://github.com/amabito/veronica-core/issues"
Changelog = "https://github.com/amabito/veronica-core/blob/main/CHANGELOG.md"
Documentation = "https://veronica-core.dev"

[project.optional-dependencies]
redis = [
    "redis>=5.0",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "cryptography>=42",
    "fakeredis>=2.0",
    "opentelemetry-sdk>=1.20",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/veronica", "src/veronica_core"]

[tool.hatch.build.targets.wheel]
packages = ["src/veronica", "src/veronica_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["veronica_core"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[dependency-groups]
dev = [
    "fakeredis>=2.0",
    "lupa>=2.6",
    "redis>=5.0",
]
